--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "crack",
   "main": "dist/crack.min.js",
   "directories": {
-    "test": "test"
+    "example": "examples"
   },
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "dev": "rollup --watch --config build/rollup.dev.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,13 @@
   },
   "homepage": "https://github.com/YuAoi/Crack#readme",
   "devDependencies": {
-    "rollup": "^0.49.2",
+    "cz-conventional-changelog": "^2.1.0",
+    "rollup": "^0.49.3",
     "rollup-plugin-babel": "^3.0.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
